attempted to fix align

--- a/unit_4/css/style.css
+++ b/unit_4/css/style.css
@@ -29,3 +29,6 @@ p {
 	font-family: 'Vollkorn', serif;
 	margin: 7em;
 }
+table {
+	align-items: center;
+}
